# PokemonCollection

./: .gitignore  platformio.ini
data/sd/pokemon/: index.json  index_en.json  settings.json  type_matchup_random_index.json
data/sd/pokemon/details/: 0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  0028.json  0029.json  0030.json  0031.json  0032.json  0033.json  0034.json  0035.json  0036.json  0037.json  0038.json  0039.json  0040.json  (+987 more)
data/sd/pokemon/firered/: location_pokemon_map.json  locations.json
data/sd/pokemon/firered/pokemon/: 0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  0028.json  0029.json  0030.json  0031.json  0032.json  0033.json  0034.json  0035.json  0036.json  0037.json  0038.json  0039.json  0040.json  (+346 more)
data/sd/pokemon/lockon/: secret_ids.json
data/sd/pokemon/sounds/music/PokemonRG_Music/: playlist.txt
data_src/firered/: encounters.csv  evolutions.csv  item_name_map.csv  item_name_map_generated.csv  level_up_moves.csv  location_master.csv  locations.csv  machines.csv  method_master.csv  move_name_map.csv  move_name_map_generated.csv
data_src/firered_raw/: encounters.csv  evolutions.csv  level_up_moves.csv  locations.csv  machines.csv
docs/: architecture.md  development-workflow.md  firered-data-pipeline.md  firered-guide-spec.md  issues.md  quiz-spec.md  require-spec.md
include/: AppAudio.h  AppConcurrency.h  AppDevice.h  AppInput.h  AppMotion.h  AppPlatform.h  AppPower.h  AppRuntime.h  AppSensors.h  AppStorage.h  Config.h  DataManager.h  ImageLoader.h  PcRenderer.h  Renderer.h  UIController.h
lib/: README.md
sim/: CMakeLists.txt  CMakePresets.json  LgfxSpriteShim.cpp  M5RendererShim.cpp  README.md  SimPlatform.cpp  SimSd.cpp  bootstrap.sh  main.cpp
sim/include/: Arduino.h  FS.h  M5Unified.h  SD.h  SimPlatform.h  SimSd.h  esp_heap_caps.h  esp_system.h
sim/include/freertos/: FreeRTOS.h  queue.h  semphr.h  task.h
src/: AppAudio.cpp  AppConcurrency.cpp  AppDevice.cpp  AppInput.cpp  AppMotion.cpp  AppPlatform.cpp  AppPower.cpp  AppSensors.cpp  AppStorage.cpp  DataManager.cpp  ImageLoader.cpp  PcRenderer.cpp  Renderer.cpp  UIController.cpp  main.cpp
tools/: build_firered_data.py  build_pokeapi_ja_maps.py  build_pokemon_index_en.py  build_type_matchup_random_index.py  curate_firered_data.py  import_firered_from_pokeapi.py  optimize_wav.py
